# sky_prompt

./: .gitignore  .sky  LICENSE  README.md  pyproject.toml  sky  sky_prompt.py  unchained_prompt.py
scripts/: orchestrator.py  test_install_terminal.sh  test_loop.sh  test_orchestrator.py
